--- a/assets/scss/overrides.scss
+++ b/assets/scss/overrides.scss
@@ -1,6 +1,17 @@
 .site-hero{
   background-color: $primary-color;
   &-content{
+    img{
+      display: block;
+      box-sizing: border-box;
+      border-radius: 50%;
+      border: 10px solid #fff;
+      margin: 1em;
+      width: 100%;
+      height: auto;
+      max-width: 300px;
+      max-height: 300px;
+    }
     h1{
       color: $white;
       font-size: 150px;
@@ -18,6 +29,10 @@
       color: $white;
       margin-bottom: 50px;
     }
+    p{
+      font-size: 18px;
+      line-height: 2;
+    }
   }
 }
 
@@ -28,5 +43,17 @@
   }
   p, li{
     color: $text-color-dark;
+    font-size: 18px;
+    line-height: 2;
+    text-align: justify;
+  }
+  &-details{
+    blockquote{
+      p{
+        color: $primary-color;
+        font-size: 24px;
+        line-height: 1.5;
+      }
+    }
   }
 }
