--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       {{ with .Site.Params.footer.sitemap }}
-      <div class="col-lg-2 col-md-6">
+      <div class="col-lg-3 col-md-6">
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">{{ .title }}</h5>
           <ul class="site-footer-widget-links">
@@ -14,7 +14,7 @@
       </div>
       {{ end }}
       {{ with .Site.Params.footer.social }}
-      <div class="col-lg-2 col-md-6">
+      <div class="col-lg-3 col-md-6">
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">{{ .title }}</h5>
           <ul class="site-footer-widget-links">
@@ -35,7 +35,7 @@
         </div>
       </div>
       {{ end }}
-      <div class="col-lg-2 col-12">
+      <div class="col-lg-3 col-12 text-right">
         <a href="#top" class="site-footer-widget-top">
           <img src="{{ "images/to-top.svg" | absURL }}" alt="back-to-top">
           <p>
