--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,11 +3,11 @@
   {{ "<!-- Site Hero Start -->" | safeHTML }}
   <section class="site-hero">
     <div class="container">
-      <div class="row">
+      <div class="row site-hero-content">
         <div class="col-md-6">
-            <img src="images/portrait.jpg" class="mx-auto" style="display: block; box-sizing: border-box; border-radius: 50%; border: 10px solid #fff; margin: 1em; width: 100%; height: auto; max-width: 300px; max-height: 300px;" alt="Portrait" />
+            <img src="images/portrait.jpg" class="mx-auto" alt="Portrait" />
         </div>
-        <div class="col-md-6 site-hero-content">
+        <div class="col-md-6">
           <h1>Hello.</h1>
           <h2>I am {{ $.Site.Author.name | default "Hallo" }}.</h2>
           {{- $.Content -}}
