Front matter menus, social icons, icon styles

--- a/assets/scss/overrides.scss
+++ b/assets/scss/overrides.scss
@@ -33,6 +33,11 @@
       font-size: 18px;
       line-height: 2;
     }
+    a span.fa{
+      color: $white;
+      font-size: 30px;
+      padding: 5px;
+    }
   }
 }
 
