--- a/assets/scss/overrides.scss
+++ b/assets/scss/overrides.scss
@@ -53,15 +53,18 @@
     text-align: justify;
   }
   &-details{
-    blockquote{
-      p{
-        color: $primary-color;
-        font-size: 24px;
-        line-height: 1.5;
-      }
+    h2 {
+      font-size: 35px;
+    }
+    p.intro {
+      color: $text-color-dark;
+      font-size: 22px;
+      line-height: 1.5;
+      font-weight: bold;
     }
   }
 }
+
 
 pre {
   padding: 15px;
